// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubstituteRegistrationDialog matches snapshot when aborted 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="instructionalText"
                      >
                        <div
                          class="container"
                        >
                          <span
                            class="container"
                            data-cvent-id="icon"
                          >
                            <span
                              aria-hidden="true"
                              class="icon error"
                              role="img"
                            />
                          </span>
                          <h2
                            class=""
                            data-cvent-id="title"
                          >
                            ConcurrentAction_CartAborted__resx
                          </h2>
                          <h4
                            class=""
                            data-cvent-id="subtitle"
                          />
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when confirmed 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          SubstituteReg_SuccessMsgHeader__resx
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="instructionalText"
                      >
                        <div
                          class="container"
                        >
                          <span
                            class="container"
                            data-cvent-id="icon"
                          >
                            <span
                              aria-hidden="true"
                              class="icon success"
                              role="img"
                            />
                          </span>
                          <h2
                            class=""
                            data-cvent-id="title"
                          />
                          <h4
                            class=""
                            data-cvent-id="subtitle"
                          >
                            SubstituteReg_Success__resx:{"FirstName":"firstName","LastName":"lastName"}
                          </h4>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when confirmed but error out 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="instructionalText"
                      >
                        <div
                          class="container"
                        >
                          <span
                            class="container"
                            data-cvent-id="icon"
                          >
                            <span
                              aria-hidden="true"
                              class="icon error"
                              role="img"
                            />
                          </span>
                          <h2
                            class=""
                            data-cvent-id="title"
                          >
                            EventWidgets_ContactPlanner_ErrorTitle__resx
                          </h2>
                          <h4
                            class=""
                            data-cvent-id="subtitle"
                          />
                          <div
                            class="backButtonContainer"
                          >
                            <button
                              class=""
                              data-cvent-id="link"
                              title="< EventWidgets_AlreadyRegistered_BackButton__resx"
                              type="button"
                            >
                              <span>
                                &lt; EventWidgets_AlreadyRegistered_BackButton__resx
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                        >
                          <h2
                            class="headerText"
                          >
                            SubstituteReg_Header__resx
                          </h2>
                          <p
                            class="instructionalText"
                          >
                            SubstituteReg_Instruction__resx
                          </p>
                        </div>
                        <div>
                          <div>
                            <div
                              class="element"
                              data-cvent-id="first-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="firstName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_FirstName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="firstName"
                                    maxlength="30"
                                    name="firstName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="last-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="lastName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_LastName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="lastName"
                                    maxlength="50"
                                    name="lastName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="email-Address"
                            >
                              <label
                                class="labelOnTop"
                                for="emailAddress"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_EmailAddress__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="emailAddress"
                                    maxlength="80"
                                    name="emailAddress"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                            <button
                              class=""
                              data-cvent-id="submit-button"
                            >
                              EventWidgets_AlreadyRegistered_Submit__resx
                            </button>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when submit button is clicked 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          SubstituteReg_ConfirmationHeader__resx
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          data-cvent-id="confirmation-form"
                        >
                          <div
                            class="cancelRegistrationModalText"
                          >
                            <h3
                              class="instructionalText"
                            >
                              SubstituteReg_Confirmation__resx
                            </h3>
                          </div>
                          <button
                            aria-label="SubstituteReg_Back__resx"
                            class=""
                            data-cvent-id="no-submit-button"
                            title="SubstituteReg_Back__resx"
                            type="button"
                          >
                            <span>
                              SubstituteReg_Back__resx
                            </span>
                          </button>
                          <button
                            aria-label="SubstituteReg_Submit__resx"
                            class=""
                            data-cvent-id="yes-submit-button"
                            title="SubstituteReg_Submit__resx"
                            type="button"
                          >
                            <span>
                              SubstituteReg_Submit__resx
                            </span>
                          </button>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when submit button is clicked but this is concurrent action 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          data-cvent-id="confirmation-form"
                        >
                          <div
                            class="cancelRegistrationModalText"
                          >
                            <h3
                              class="instructionalText"
                            >
                              SubstituteReg_ConcurrentAction__resx
                            </h3>
                          </div>
                          <button
                            aria-label="SubstituteReg_ConcurrentActionAbortTheir__resx"
                            class=""
                            data-cvent-id="no-submit-button"
                            title="SubstituteReg_ConcurrentActionAbortTheir__resx"
                            type="button"
                          >
                            <span>
                              SubstituteReg_ConcurrentActionAbortTheir__resx
                            </span>
                          </button>
                          <button
                            aria-label="SubstituteReg_ConcurrentActionAbortMine__resx"
                            class=""
                            data-cvent-id="yes-submit-button"
                            title="SubstituteReg_ConcurrentActionAbortMine__resx"
                            type="button"
                          >
                            <span>
                              SubstituteReg_ConcurrentActionAbortMine__resx
                            </span>
                          </button>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when submit button is clicked but validation is thrown 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                        >
                          <h2
                            class="headerText"
                          >
                            SubstituteReg_Header__resx
                          </h2>
                          <p
                            class="instructionalText"
                          >
                            SubstituteReg_Instruction__resx
                          </p>
                        </div>
                        <div
                          class="errorMessages"
                          data-cvent-id="error-message"
                        >
                          This is a Validation.
                        </div>
                        <div
                          class="errorMessages"
                          data-cvent-id="error-message"
                        >
                          This is another Validation.
                        </div>
                        <div>
                          <div>
                            <div
                              class="element"
                              data-cvent-id="first-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="firstName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_FirstName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="firstName"
                                    maxlength="30"
                                    name="firstName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="firstName"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="last-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="lastName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_LastName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="lastName"
                                    maxlength="50"
                                    name="lastName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="lastName"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="email-Address"
                            >
                              <label
                                class="labelOnTop"
                                for="emailAddress"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_EmailAddress__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="emailAddress"
                                    maxlength="80"
                                    name="emailAddress"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="emailAddress"
                                  />
                                </div>
                              </div>
                            </div>
                            <button
                              class=""
                              data-cvent-id="submit-button"
                            >
                              EventWidgets_AlreadyRegistered_Submit__resx
                            </button>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`SubstituteRegistrationDialog matches snapshot when submit button is disabled on concurrent validation 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class=""
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    class="dialogContainer"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        data-cvent-id="Dialog-Header"
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          Dummy title
                        </h2>
                      </div>
                    </div>
                    <span
                      class="mockNucleusCoreTransition"
                    >
                      <div
                        class="panel"
                      >
                        <div
                          class=""
                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                        >
                          <h2
                            class="headerText"
                          >
                            SubstituteReg_Header__resx
                          </h2>
                          <p
                            class="instructionalText"
                          >
                            SubstituteReg_Instruction__resx
                          </p>
                        </div>
                        <div
                          class="errorMessages"
                          data-cvent-id="error-message"
                        >
                          This substituent is already a part of another substitution. Please try with other substituent or try again later.
                        </div>
                        <div>
                          <div>
                            <div
                              class="element"
                              data-cvent-id="first-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="firstName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_FirstName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="firstName"
                                    maxlength="30"
                                    name="firstName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="firstName"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="last-Name"
                            >
                              <label
                                class="labelOnTop"
                                for="lastName"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_LastName__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="lastName"
                                    maxlength="50"
                                    name="lastName"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="lastName"
                                  />
                                </div>
                              </div>
                            </div>
                            <div
                              class="element"
                              data-cvent-id="email-Address"
                            >
                              <label
                                class="labelOnTop"
                                for="emailAddress"
                              >
                                <span
                                  class=""
                                >
                                  <span
                                    class=""
                                  >
                                    * 
                                  </span>
                                  <span
                                    data-cvent-id="label"
                                  >
                                    StandardContactField_EmailAddress__resx
                                  </span>
                                </span>
                              </label>
                              <div
                                class="inputContainerOnRight"
                              >
                                <div
                                  class=""
                                >
                                  <input
                                    class=""
                                    data-cvent-id="input"
                                    id="emailAddress"
                                    maxlength="80"
                                    name="emailAddress"
                                    placeholder=""
                                    required=""
                                    type="text"
                                    value="emailAddress"
                                  />
                                </div>
                              </div>
                            </div>
                            <button
                              class=""
                              data-cvent-id="submit-button"
                            >
                              EventWidgets_AlreadyRegistered_Submit__resx
                            </button>
                          </div>
                        </div>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;
